--- a/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
+++ b/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
@@ -41,7 +41,7 @@
     font-weight: 600;
     font-size: 16px;
     color: #000000;
-    padding: 10px 10px 0 0;
+    padding: 10px 0 0 10px;
 
 }
 
@@ -51,7 +51,7 @@
     font-weight: 400;
     font-size: 16px;
     color: #000000;
-    padding: 10px 10px 0 0;
+    padding: 10px;
 }
 
 .friendTime {
