--- a/src/s2-homeworks/hw03/Greeting.module.css
+++ b/src/s2-homeworks/hw03/Greeting.module.css
@@ -1,22 +1,49 @@
 .greetingForm {
+    /*border: 3px solid green;*/
+    margin: 0 70px;
+
 }
 
 .inputAndButtonContainer {
+    /*border: 3px dashed blue;*/
+    display: flex;
+    gap: 10px;
+    margin: 5px 0;
 }
 
 .error {
+    color: rgba(204, 0, 0, 1);
 }
 
 .input {
+    opacity: 50%;
+    min-width: 372px;
+    height: 36px;
+    border-radius: 5px;
+    padding: 0 10px;
+;
+
 }
 
 .input:focus {
+
 }
 
 .errorInput {
+    width: 372px;
+    height: 36px;
+    border: 1px solid rgba(204, 0, 0, 1);
+    border-radius: 3px;
 }
 
 .button {
+    width: 78px;
+    height: 36px;
+    padding: 5px 24px 5px 24px;
+    opacity: 0.5;
+    border-radius: 3px;
+    background-color: #0066CC;
+    color: #FFFFFF;
 }
 
 .button:focus {
@@ -29,7 +56,9 @@
 }
 
 .text {
+ color: #00000080;
 }
 
 .greeting {
+    color: rgba(0, 0, 0, 1);
 }
