refactor: change styles task 1

--- a/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
+++ b/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
@@ -1,11 +1,12 @@
 .sendForm {
     display: flex;
     justify-content: space-between;
+    gap: 44px;
     margin-top: 50px;
 }
 
 .textarea {
-    width: 900px;
+    width: 100%;
     border-radius: 15px;
     resize: none;
     overflow: hidden;
