--- a/src/s2-homeworks/hw05/header/Header.module.css
+++ b/src/s2-homeworks/hw05/header/Header.module.css
@@ -1,8 +1,37 @@
 .burgerMenuIcon {
+    width: 24px;
+    height: 24px;
+    margin-top: 20px;
+    margin-left: 70px;
 }
 
 .header {
+    display: flex;
+    justify-content: space-between;
+    height: 60px;
+    width: 100%;
+    /*margin-right: 70px;*/
+    /*border: 2px dashed red;*/
+    /*margin: 0 70px 50px 70px;*/
+    margin-bottom: 47px;
+    /*box-shadow: 0 0 2px 0 rgba(29, 33, 38, 0.1);*/
+    background: rgba(255, 255, 255, 1);
+    /*border: 2px solid red;*/
+    background: #2d467c;
 }
 
 .header h1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 17px;
+    margin-bottom: 14px;
+    margin-right: 70px;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 30px;
+    text-align: left;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    color: #c9e5ff;
 }
