--- a/src/s2-homeworks/hw06/common/c4-SuperEditableSpan/SuperEditableSpan.module.css
+++ b/src/s2-homeworks/hw06/common/c4-SuperEditableSpan/SuperEditableSpan.module.css
@@ -1,10 +1,26 @@
 .spanBlock {
+    display: flex;
+    gap: 20px;
+    margin-bottom: 22px;
 }
 
 .span {
+    color: rgba(0, 128, 255, 1);
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 20px;
 }
 
 .input {
+    width: 288px;
+    margin-bottom: 16px;
+    padding: 8px 0 8px 24px;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 20px;
+    opacity: unset;
+    border: 1px solid rgba(209, 209, 209, 1)
+
 }
 
 .pen {
