--- a/src/s2-homeworks/hw07/common/c5-SuperSelect/SuperSelect.module.css
+++ b/src/s2-homeworks/hw07/common/c5-SuperSelect/SuperSelect.module.css
@@ -1,9 +1,16 @@
 .select {
+    width: 180px;
+    border-radius: 2px;
+    border: 1px solid rgba(194, 194, 194, 1);
+    padding: 2px 0 2px 10px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 17px;
 }
 
 .select:focus {
+    border: 1px solid rgba(0, 0, 0, 1)
 }
-
 
 .option:hover {
 }
