--- a/src/s2-homeworks/hw03/Greeting.module.css
+++ b/src/s2-homeworks/hw03/Greeting.module.css
@@ -38,13 +38,18 @@
     width: 78px;
     height: 36px;
     padding: 5px 24px 5px 24px;
-    opacity: 0.5;
     border-radius: 3px;
-    background-color: #0066CC;
+    background-color: #004D99;
     color: #FFFFFF;
+    cursor: pointer;
 }
 
 .button:focus {
+}
+
+.button:hover {
+    background-color: #0080FF;
+
 }
 
 .button:active {
