--- a/src/s2-homeworks/hw09/Clock.module.css
+++ b/src/s2-homeworks/hw09/Clock.module.css
@@ -1,14 +1,50 @@
 .buttonsContainer {
+    /*border: 3px solid brown;*/
+
+    display: flex;
+    gap: 21px;
+
 }
 
 .clock {
+    /*border: 4px solid #64ce94;*/
+
+    display: inline-block;
+
 }
 
 .watch {
+    /*border: 2px solid green;*/
+
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 100%;
+    letter-spacing: 0;
+    color: rgba(0, 0, 0, 1);
+
 }
 
 .watch strong {
+    /*border: 2px solid yellow;*/
+
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 100%;
+    letter-spacing: 0;
+
+
 }
 
 .more {
+    /*border: 2px solid orange;*/
+    min-height: 45px;
+}
+
+.more span {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 100%;
+    letter-spacing: 0;
+    color: rgba(0, 0, 0, 0.5);
+
 }
