--- a/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
+++ b/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
@@ -1,5 +1,5 @@
 .button {
-    width: 132px;
+    min-width: 132px;
     height: 30px;
     padding: 5px 24px 5px 24px;
     border-radius: 3px;
@@ -16,7 +16,7 @@
     background: #FFFFFF;
     color: #0066CC;
     border-color: #0066CC;
-
+    font-weight: bold;
 }
 
 .default {
